# EditorLXC

./: CMakeLists.txt  JSONDataModel.cpp  JSONDataModel.h  configPathes.h  idEnum.h  main.cpp  mainFrame.cpp  mainFrame.h  resourceLoader.cpp  resourceLoader.h  sample.json
assets/: logo.xcf
cmake/: FindwxWidgets.cmake
